# project

backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 24ee81d6b68f_fix_project_model_defaults.py  93f55a35abb8_feat_done_projects_and_tasks.py  b088284d178d_initial_schema.py
backend/src/: __init__.py  main.py
backend/src/core/: config.py  db.py  dependencies.py  security.py
backend/src/models/: __init__.py  project.py  task.py  user.py  workspace.py
backend/src/routes/: auth.py  projects.py  tasks.py  users.py  workspaces.py
backend/src/schemas/: __init__.py  project.py  task.py  user.py  workspace.py
